Add some history function
