# handler/view.go
@@ -16,7 +16,7 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Param			slug	path		string	true	"Note slug"
-//	@Success		200		{object}	NoteResponse
+//	@Success		200		{object}	NoteWithHistoriesResponse
 //	@Failure		404		{object}	ErrorResponse
 //	@Failure		500		{object}	ErrorResponse
 //	@Router			/notes/{slug} [get]
@@ -36,16 +36,37 @@ func ViewNote(db *gorm.DB) gin.HandlerFunc {
 			return
 		}
 
-		c.JSON(http.StatusOK, NoteResponse{
-			ID:             note.ID,
-			Slug:           note.Slug,
-			Title:          note.Title,
-			Body:           note.Body,
-			IsEncrypted:    note.IsEncrypted,
-			CreatedAt:      note.CreatedAt.Unix(),
-			UpdatedAt:      note.UpdatedAt.Unix(),
-			EncryptionSalt: note.EncryptionSalt,
-			EncryptionTag:  note.EncryptionTag,
+		var histories []model.NoteHistory
+		if err := db.Where("note_id = ?", note.ID).Find(&histories).Error; err != nil {
+			c.JSON(http.StatusInternalServerError, ErrorResponse{Error: "Failed to retrieve note histories"})
+			return
+		}
+
+		// Convert histories to []SingleNote
+		var singleNoteHistories []SingleNote
+		for _, history := range histories {
+			singleNoteHistories = append(singleNoteHistories, SingleNote{
+				Title:     history.Title,
+				Body:      history.Body,
+				CreatedAt: history.CreatedAt.Unix(),
+			})
+		}
+
+		c.JSON(http.StatusOK, NoteWithHistoriesResponse{
+			NoteResponse: NoteResponse{
+				SingleNote: SingleNote{
+					Title:     note.Title,
+					Body:      note.Body,
+					CreatedAt: note.CreatedAt.Unix(),
+				},
+				ID:             note.ID,
+				Slug:           note.Slug,
+				IsEncrypted:    note.IsEncrypted,
+				UpdatedAt:      note.UpdatedAt.Unix(),
+				EncryptionSalt: note.EncryptionSalt,
+				EncryptionTag:  note.EncryptionTag,
+			},
+			Histories: singleNoteHistories,
 		})
 	}
 }
